#
# $Id$
#
# Copyright (C) 2002 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2002.
#

include $(top_srcdir)/Makefile.rules

nobase_dist_pkgdata_DATA = \
	MANUFACTURERS \
	altera/PARTS \
	altera/ep1c20f400/STEPPINGS \
	altera/ep1c20f400/ep1c20f400 \
	altera/epm7128aetc100/STEPPINGS \
	altera/epm7128aetc100/epm7128aetc100 \
	atmel/PARTS \
	atmel/atmega128/STEPPINGS \
	atmel/atmega128/atmega128 \
	broadcom/PARTS \
	broadcom/bcm1250/STEPPINGS \
	broadcom/bcm1250/bcm1250 \
	broadcom/bcm3310/STEPPINGS \
	broadcom/bcm3310/bcm3310 \
	broadcom/bcm5421s/STEPPINGS \
	broadcom/bcm5421s/bcm5421s \
	dec/PARTS \
	dec/sa1100/STEPPINGS \
	dec/sa1100/sa1100 \
	hitachi/PARTS \
	hitachi/sh7727/STEPPINGS \
	hitachi/sh7727/sh7727 \
	intel/PARTS \
	intel/pxa250/STEPPINGS \
	intel/pxa250/pxa250 \
	intel/pxa250/pxa250c0 \
	intel/sa1110/STEPPINGS \
	intel/sa1110/sa1110 \
	intel/ixp425/STEPPINGS \
	intel/ixp425/ixp425 \
	philips/PARTS \
	philips/xcr3128xl-cs144/STEPPINGS \
	philips/xcr3128xl-cs144/xcr3128xl-cs144 \
	samsung/s3c4510b/s3c4510b \
	xilinx/PARTS \
	xilinx/xcr3128xl-cs144/STEPPINGS \
	xilinx/xcr3128xl-cs144/xcr3128xl-cs144 \
	xilinx/xcr3256xl-ft256/STEPPINGS \
	xilinx/xcr3256xl-ft256/xcr3256xl-ft256 \
	xilinx/xc2c256-tq144/STEPPINGS \
	xilinx/xc2c256-tq144/xc2c256-tq144
