#
# $Id$
#
# Copyright (C) 2002 ETC s.r.o.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
# 02111-1307, USA.
#
# Written by Marcel Telka <marcel@telka.sk>, 2002.
#

include $(top_srcdir)/Makefile.rules

nobase_dist_pkgdata_DATA = \
	MANUFACTURERS \
	altera/PARTS \
	altera/ep1c20f400/STEPPINGS \
	altera/ep1c20f400/ep1c20f400 \
	altera/ep1c6q240/ep1c6q240 \
	altera/epm7128aetc100/STEPPINGS \
	altera/epm7128aetc100/epm7128aetc100 \
	altera/ep1c12/STEPPINGS \
	altera/ep1c12/ep1c12 \
	altera/ep1c12/f256 \
	altera/ep1c12/f324 \
	altera/ep1c12/q240 \
	altera/epm3064a/STEPPINGS \
	altera/epm3064a/epm3064a \
	altera/epm3064a/l44 \
	altera/epm3064a/t100 \
	altera/epm3064a/t44 \
	atmel/PARTS \
	atmel/atmega128/STEPPINGS \
	atmel/atmega128/atmega128 \
	atmel/at91sam7s256/STEPPINGS \
	atmel/at91sam7s256/at91sam7s_tq64v0 \
	atmel/at91sam7s256/at91sam7s_tq48v0 \
	analog/PARTS \
	analog/bf533/STEPPINGS \
	analog/bf533/bf533 \
	broadcom/PARTS \
	broadcom/bcm1250/STEPPINGS \
	broadcom/bcm1250/bcm1250 \
	broadcom/bcm3310/STEPPINGS \
	broadcom/bcm3310/bcm3310 \
	broadcom/bcm5421s/STEPPINGS \
	broadcom/bcm5421s/bcm5421s \
	dec/PARTS \
	dec/sa1100/STEPPINGS \
	dec/sa1100/sa1100 \
	hitachi/PARTS \
	hitachi/hd64465/hd64465 \
	hitachi/sh7727/STEPPINGS \
	hitachi/sh7727/sh7727 \
	hitachi/sh7729/STEPPINGS \
	hitachi/sh7729/sh7729 \
	freescale/PARTS \
	freescale/mpc5200/STEPPINGS \
	freescale/mpc5200/mpc5200 \
	ibm/PARTS \
	ibm/ppc440gx/STEPPINGS \
	ibm/ppc440gx/ppc440gx \
	ibm/ppc405ep/STEPPINGS \
	ibm/ppc405ep/ppc405ep \
	intel/PARTS \
	intel/pxa250/STEPPINGS \
	intel/pxa250/pxa250 \
	intel/pxa250/pxa250c0 \
	intel/pxa270/STEPPINGS \
	intel/pxa270/pxa270 \
	intel/sa1110/STEPPINGS \
	intel/sa1110/sa1110 \
	intel/ixp425/STEPPINGS \
	intel/ixp425/ixp425 \
	lattice/PARTS \
	lattice/lc4032v-tqfp48/STEPPINGS \
	lattice/lc4032v-tqfp48/lc4032v-tqfp48 \
	lattice/m4a3-256.192-fpbga256/STEPPINGS \
	lattice/m4a3-256.192-fpbga256/m4a3-256.192-fpbga256 \
	lattice/m4a3-64.32-tqfp48/STEPPINGS \
	lattice/m4a3-64.32-tqfp48/m4a3-64.32-tqfp48 \
	motorola/mpc8245/1.2 \
	philips/PARTS \
	philips/xcr3128xl-cs144/STEPPINGS \
	philips/xcr3128xl-cs144/xcr3128xl-cs144 \
	philips/xcr3128xl-vq100/STEPPINGS \
	philips/xcr3128xl-vq100/xcr3128xl-vq100 \
	samsung/s3c4510b/s3c4510b \
	sharp/PARTS \
	sharp/lh7a400/STEPPINGS \
	sharp/lh7a400/lh7a400 \
	toshiba/PARTS \
	toshiba/tx4925/STEPPINGS \
	toshiba/tx4925/tx4925 \
	toshiba/tx4926/STEPPINGS \
	toshiba/tx4926/tx4926 \
	xilinx/PARTS \
	xilinx/xcr3032xl-vq44/STEPPINGS \
	xilinx/xcr3032xl-vq44/xcr3032xl-vq44 \
	xilinx/xcr3128xl-cs144/STEPPINGS \
	xilinx/xcr3128xl-cs144/xcr3128xl-cs144 \
	xilinx/xcr3128xl-vq100/xcr3128xl-vq100 \
	xilinx/xcr3256xl-ft256/STEPPINGS \
	xilinx/xcr3256xl-ft256/xcr3256xl-ft256 \
	xilinx/xc2c256-tq144/STEPPINGS \
	xilinx/xc2c256-tq144/xc2c256-tq144
